  * extensible path-based authorization subsystem (issue #268), supporting:
    - Subversion authz files (new)
    - regexp-based path hiding (for compat with 1.0.x)
    - file glob top-level directory hiding (for compat with 1.0.x)
  * allow default file view to be "markup" (issue #305)
  * add support for displaying file/directory properties (issue #39)
  * pagination improvements

Version 1.0.5 (released 28-Feb-2008)

  * security fix: omit commits of all-forbidden files from query results
  * security fix: disallow direct URL navigation to hidden CVSROOT folder
  * security fix: strip forbidden paths from revision view
  * security fix: don't traverse log history thru forbidden locations
  * security fix: honor forbiddenness via diff view path parameters
  * new 'forbiddenre' regexp-based path authorization feature
  * fix root name conflict resolution inconsistencies (issue #287)
  * fix an oversight in the CVS 1.12.9 loginfo-handler support
  * fix RSS feed content type to be more specific (issue #306)
  * fix entity escaping problems in RSS feed data (issue #238)
  * fix bug in tarball generation for remote Subversion repositories
  * fix query interface file-count-limiting logic
  * fix query results plus/minus count to ignore forbidden files
  * fix blame error caused by 'svn' unable to create runtime config dir

Version 1.0.4 (released 10-Apr-2007)

  * fix some markup bugs in query views (issue #266)
  * fix loginfo-handler's support for CVS 1.12.9 (issues #151, #257)
  * make viewvc-install able to run from an arbitrary location
  * update viewvc-install's output for readability
  * fix bug writing commits to non-MyISAM databases (issue #262)
  * allow long paths in generated tarballs (issue #12)
  * fix bug interpreting EZT substitute patterns
  * fix broken markup view disablement
  * fix broken directory view link generation in directory log view
  * fix Windows-specific viewvc-install bugs