@@ -208,7 +208,6 @@ td {
   <li>utilities/cvsnt</li>
   <li>utilities/diff</li>
   <li>utilities/enscript</li>
-  <li>utilities/gzip</li>
   <li>utilities/highlight</li>
   <li>utilities/php</li>
   <li>utilities/py2html_dir</li>
