@@ -26,6 +26,7 @@ Version 1.1.0 (released ??-???-????)
   * allow default file view to be "markup" (issue #305)
   * add support for displaying file/directory properties (issue #39)
   * pagination improvements
+  * add gzip output encoding support for template-driven pages
 
 Version 1.0.5 (released 28-Feb-2008)
 
